Kuvan muokkaus ja yhteydenotto lomakkeen poisto

--- a/index.html
+++ b/index.html
@@ -15,15 +15,12 @@
         <div class="col-6">
           <h1>Panu Lehtonen</h1>
         </div>
-        <div class="col-6">
-          <p class="text-right"><a href="">Lataa tiedosto</a></p>
-        </div>
       </div>
       <hr>
       <div class="row">
         <div class="col-md-8 col-sm-12">
           <div class="media">
-            <img class="mr-3" src="images/omakuva.jpg" alt="Omakuva">
+            <img class="mr-3" src="images/mina.png" alt="Omakuva">
             <div class="media-body">
               <h5 class="mt-0">Ohjelmistokehittäjä</h5>
               Tällä hetkellä ei ole kerennyt karttua kyseiselle alalle yhtään työkokemusta, koska olen alan vaihtaja. Joitain kouluprojekteja kyllä on tullut tehtyä jotka ovat kartuttaneet javan osaamista ja nyt uusin koulutus jota opiskelen on ohjelmistokehittäjä ja tarkoitus on valmistua 2022 kesällä, josta jatkan ammattikorkeakouluun, mutta töitä voi tietysti ohella tehdä.
@@ -145,6 +142,8 @@
           
         </div>
       </div>
+      <!--
+        TÄMÄ EI OLE VIELÄ TOIMINNASSA, PITÄÄ PEREHTYÄ MITEN SAA TOIMIMAAN YHTEYDENOTTO LOMAKKEEN
       <hr>
       <h2>Ota yhteyttä</h2>
       <hr>
