Majapelin nimen vaihto

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
           <div class="col-sm-4 col-12 p-0"><img class="img-thumbnail"  src="images/tictactoe.png" alt="Ristinolla"><p>Ristinolla</p></div>
         </div>
         <div class="row text-center">
-          <div class="col-sm-4 col-12 p-0"><img class="img-thumbnail"  src="images/majavapeli.png" alt="Reaktiopeli"><p>Reaktiopeli</p></div>
+          <div class="col-sm-4 col-12 p-0"><img class="img-thumbnail"  src="images/majavapeli.png" alt="Reaktiopeli"><p>Whack the mole</p></div>
           
         </div>
       </div>
